# create-mailgun-user

./: Cargo.toml  LICENSE  README.md
src/: main.rs
